Basic previewing of graft pipeline executions